Complete chat functionallity, fix logging deps